print default lang

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -4,6 +4,8 @@ div!=$t('text', 'markdown')
 
 div Current lang is #{lang}
 
+div Default lang is #{defaultLang}
+
 div Langs available:
   pre=JSON.stringify(langs)
 
